hphp/hack/test/typecheck/fc_enum_4.php
<?hh // strict

// Should fail because bool
enum Foo: bool {
  FOO = true;
}
